Update for build machine

--- a/emcssh.8
+++ b/emcssh.8
@@ -138,7 +138,7 @@ storage.
 Can contain many lists, or regular public keys.
 .RE
 
-.I /usr/local/etc/emcssh_config
+.I /etc/emercoin/emcssh.conf
 .RS
 .B emcssh
 config file. Allows the following parameters:
