Added timeout, default 30s

--- a/source/emcssh.8
+++ b/source/emcssh.8
@@ -169,6 +169,8 @@ Default is
 Contains list of elements to be ignored. Items in this list will be iterated and resolved, keys and references will be cached, but they will not be returned. Default is empty.
 .IP recursion
 Maximum depth of recursion. Default is 30.
+.IP timio
+Timeout for connection to emcurl. Default is 30 secs.
 
 .SH AUTHOR
 EmerCoin Team <team at emercoin dot com>
